[tool.poetry]
name = "telegram_bot1"
version = "0.1.0"
description = ""
authors = ["Manar Alharbi <manaralharby7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyTelegramBotAPI = "^4.12.0"
Flask = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"